# zkpdf

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  deploy-all.sh  deploy.sh
.github/: FUNDING.yml
.github/workflows/: ci-workflow.yml  ci.yml  deploy-docs.yml  deploy.yml  rust.yml
app/: README.md  deploy.sh  package-lock.json  package.json
app/.github/workflows/: deploy.yml
app/app/: page.tsx
app/app/lib/: rpc.ts
app/public/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
app/src/: App.css  App.tsx  vite-env.d.ts  wasm.ts
circuits/: .gitignore  README.md
circuits/contracts/src/: PdfVerifier.sol
circuits/contracts/src/fixtures/: groth16-fixture.json
circuits/contracts/test/: PdfVerifier.t.sol
circuits/lib/: Cargo.toml  README.md
circuits/lib/src/: lib.rs
circuits/program/: Cargo.toml
circuits/program/src/: main.rs
circuits/script/: Cargo.toml  index.js
docs/: README.md  book.toml
docs/src/: faq.md  introduction.md  quick-start.md
pdf-utils/: .gitignore  Cargo.toml  README.md
pdf-utils/core/: Cargo.toml  README.md
pdf-utils/core/src/: lib.rs
pdf-utils/extractor/: Cargo.toml  README.md
pdf-utils/extractor/src/: cmap.rs  encoding.rs  lib.rs  parser.rs  parser_utils.rs
pdf-utils/signature-validator/: Cargo.toml  README.md
pdf-utils/signature-validator/src/: ber.rs  lib.rs  pkcs7_parser.rs  signed_bytes_extractor.rs  types.rs
pdf-utils/signature-verifier/: Cargo.toml  README.md
pdf-utils/wasm/: Cargo.toml  generate_wasm.sh  index.html
pdf-utils/wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
pdf-utils/wasm/src/: lib.rs
