[package]
name = "zkpdf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sha2 = { version = "0.10", default-features = false }
zkpdf_core = { path = "../../pdf-utils/core", package = "core" }


[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
