[package]
name = "zkpdf-lib"
version = "0.1.0"
edition = "2021"
authors = ["Kushmanmb"]
description = "SP1-compatible zero-knowledge proof library for PDF signature and text verification"
repository = "https://github.com/Kushmanmb/kushmanmb"
license = "MIT"
keywords = ["zkp", "pdf", "sp1", "zero-knowledge", "circuits"]
categories = ["cryptography", "no-std"]


[dependencies]
alloy-sol-types = { workspace = true }
sha2 = { version = "0.10", default-features = false }
alloy-primitives = "0.8"
serde = { version = "1", features = ["derive"] }
signature-validator = { path = "../../pdf-utils/signature-validator" }
extractor = { path = "../../pdf-utils/extractor" }
pdf_core = { package = "core", path = "../../pdf-utils/core" }
regex = "1.11"
