[package]
version = "0.1.0"
name = "zkpdf-program"
edition = "2021"
authors = ["Kushmanmb"]
description = "SP1 zkVM program for verifying PDF signatures and text proofs"
repository = "https://github.com/Kushmanmb/kushmanmb"
license = "MIT"
keywords = ["zkp", "pdf", "sp1", "zkvm", "program"]
categories = ["cryptography", "no-std"]

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "5.0.0"
zkpdf-lib = { path = "../lib" }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
