[package]
name = "signature-validator"
version = "0.1.0"
edition = "2021"
authors = ["Kushmanmb"]
description = "PKCS#7 digital signature validation (RSA-SHA256) for PDF documents"
repository = "https://github.com/Kushmanmb/kushmanmb"
license = "MIT"
keywords = ["pdf", "pkcs7", "signature", "rsa", "verification"]
categories = ["cryptography", "authentication"]

[dependencies]
hex = "0.4.3"
simple_asn1 = "0.6.3"
rsa = "0.9.10"
sha2 = { version = "0.10.8", features = ["oid"] }
sha1 = { version = "0.10.6", features = ["oid"] } 
num-bigint = "0.4.6"
num-traits = "0.2.19"
thiserror = "1.0"

[features]
private_tests = []
