[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
authors = ["Kushmanmb"]
description = "WebAssembly bindings for PDF verification in browser environments"
repository = "https://github.com/Kushmanmb/kushmanmb"
license = "MIT"
keywords = ["pdf", "wasm", "webassembly", "zkp", "browser"]
categories = ["wasm", "cryptography"]


[lib]
crate-type = ["cdylib"]

[dependencies]
core = {path = "../core"}
extractor = {path ="../extractor"}
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
base64 = "0.21"